<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textColor="#000000"
            android:textSize="16pt"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="59dp" />

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/nickname" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password" />

        <Button
            android:id="@+id/buttonAddUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66BB6A"
            android:text="@string/registrate" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/already_have_account"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF"
            app:iconTint="#0E0E0E"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="407dp"
            tools:ignore="OnClick" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>